@@ -8,6 +8,7 @@
     * FS#318
     * Improved inline size
     * !FS#313
+    * Begining the assistant
 
 2009-06-21 Maximilien Cuony
     * 0.7.6 released !
